docs: prevent propName from wrapping in component props

--- a/docs/components/ComponentLayout.css
+++ b/docs/components/ComponentLayout.css
@@ -125,6 +125,15 @@ ul.Component__list li {
   text-align: center;
 }
 
+table.Component__Props tr td:first-child,
+ul.Component__Props
+  li
+  dl
+  .DescriptionList__item:first-child
+  .DescriptionList__details {
+  white-space: nowrap;
+}
+
 ul.Component__Props {
   list-style-type: none;
   margin: 0 !important;
